<resources>
    <string name="app_name">Prototype</string>
    <string name="submit">Submit</string>
    <string name="food">Food</string>
    <string name="malls">Malls</string>
    <string name="movies">Movies</string>
    <string name="places">Places</string>
    <string name="age">Age</string>
    <string name="contact_number">Contact Number</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="username">Username</string>
</resources>
